{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 42,
  "lineage": "ef98575c-585c-d3bd-cee1-a1c89fd9ac72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b009e5c5c57ffa4",
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:elastic-ip/eipalloc-05b009e5c5c57ffa4",
            "association_id": "eipassoc-0ab66b089f7def9f8",
            "domain": "vpc",
            "id": "eipalloc-05b009e5c5c57ffa4",
            "instance": "i-0e6816a24359a3242",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-04fe503631ac7febd",
            "private_dns": "ip-10-2-1-71.ap-northeast-1.compute.internal",
            "private_ip": "10.2.1.71",
            "public_dns": "ec2-35-75-70-91.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.70.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sonar-prod-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-prod-eip",
              "Project": "sonar"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_sops",
            "aws_iam_role.ec2_sops",
            "aws_instance.app",
            "aws_key_pair.deploy",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nixos"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd2bc91342d0ede8",
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:elastic-ip/eipalloc-0dd2bc91342d0ede8",
            "association_id": "eipassoc-0bf27aafb44b208a8",
            "domain": "vpc",
            "id": "eipalloc-0dd2bc91342d0ede8",
            "instance": "i-008a4affc89f7bfaa",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-020507d5345619be0",
            "private_dns": "ip-10-2-1-125.ap-northeast-1.compute.internal",
            "private_ip": "10.2.1.125",
            "public_dns": "ec2-18-178-160-195.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.160.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sonar-staging-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-staging-eip",
              "Project": "sonar"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_sops",
            "aws_iam_role.ec2_sops",
            "aws_instance.app",
            "aws_key_pair.deploy",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nixos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0485f1d0ae7e66482",
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:instance/i-0e6816a24359a3242",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sonar-ec2-sops",
            "id": "i-0e6816a24359a3242",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da14:1a01:f201:2bc7:8d13:d293:da38"
            ],
            "key_name": "sonar-deploy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04fe503631ac7febd",
            "private_dns": "ip-10-2-1-71.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.71",
            "public_dns": "ec2-35-75-70-91.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.70.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "terraform",
                  "Project": "sonar"
                },
                "throughput": 125,
                "volume_id": "vol-0cfb1f3dcf8d34cce",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75ce4324308522c",
            "tags": {
              "Name": "sonar-prod-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-prod-app",
              "Project": "sonar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037c37a112ab38fb7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_sops",
            "aws_iam_role.ec2_sops",
            "aws_key_pair.deploy",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nixos"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0485f1d0ae7e66482",
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:instance/i-008a4affc89f7bfaa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sonar-ec2-sops",
            "id": "i-008a4affc89f7bfaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da14:1a01:f201:b583:167:69f2:4000"
            ],
            "key_name": "sonar-deploy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-020507d5345619be0",
            "private_dns": "ip-10-2-1-125.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.125",
            "public_dns": "ec2-3-115-106-113.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.115.106.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "terraform",
                  "Project": "sonar"
                },
                "throughput": 125,
                "volume_id": "vol-08bb7168220d678a8",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75ce4324308522c",
            "tags": {
              "Name": "sonar-staging-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-staging-app",
              "Project": "sonar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037c37a112ab38fb7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_sops",
            "aws_iam_role.ec2_sops",
            "aws_key_pair.deploy",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.nixos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:internet-gateway/igw-03ee9ee343730db6c",
            "id": "igw-03ee9ee343730db6c",
            "owner_id": "377786476154",
            "tags": {
              "Name": "sonar-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-igw",
              "Project": "sonar"
            },
            "vpc_id": "vpc-0bbd56407374bda85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ee9ee343730db6c",
            "id": "r-rtb-0d3074c10238f401c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3074c10238f401c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv6_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ee9ee343730db6c",
            "id": "r-rtb-0d3074c10238f401c2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3074c10238f401c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:route-table/rtb-0d3074c10238f401c",
            "id": "rtb-0d3074c10238f401c",
            "owner_id": "377786476154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ee9ee343730db6c",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ee9ee343730db6c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonar-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-public-rt",
              "Project": "sonar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd56407374bda85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f756c065ad908be",
            "route_table_id": "rtb-0d3074c10238f401c",
            "subnet_id": "subnet-0b75ce4324308522c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:security-group/sg-037c37a112ab38fb7",
            "description": "Sonar application access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c37a112ab38fb7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (ACME challenge + redirect)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sonar-app-20260304050620801600000002",
            "name_prefix": "sonar-app-",
            "owner_id": "377786476154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonar-app-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-app-sg",
              "Project": "sonar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd56407374bda85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:subnet/subnet-0b75ce4324308522c",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b75ce4324308522c",
            "ipv6_cidr_block": "2406:da14:1a01:f201::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d99e6617e78aff0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "377786476154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonar-public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-public",
              "Project": "sonar"
            },
            "vpc_id": "vpc-0bbd56407374bda85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:vpc/vpc-0bbd56407374bda85",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0c4e14baee8b77a8d",
            "default_route_table_id": "rtb-035c0f22645615a53",
            "default_security_group_id": "sg-04027c1655a82fc97",
            "dhcp_options_id": "dopt-001d48fb0a5de7489",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbd56407374bda85",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-09a9c7567b34c2b35",
            "ipv6_cidr_block": "2406:da14:1a01:f200::/56",
            "ipv6_cidr_block_network_border_group": "ap-northeast-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035c0f22645615a53",
            "owner_id": "377786476154",
            "tags": {
              "Name": "sonar-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "sonar-vpc",
              "Project": "sonar"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:security-group-rule/sgr-0a1618cab8d276796",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a1618cab8d276796",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037c37a112ab38fb7",
            "security_group_rule_id": "sgr-0a1618cab8d276796",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "sonar"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:security-group-rule/sgr-0168a196a1a018084",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0168a196a1a018084",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037c37a112ab38fb7",
            "security_group_rule_id": "sgr-0168a196a1a018084",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "sonar"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:security-group-rule/sgr-0b46dec953475870d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP (ACME challenge + redirect)",
            "from_port": 80,
            "id": "sgr-0b46dec953475870d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037c37a112ab38fb7",
            "security_group_rule_id": "sgr-0b46dec953475870d",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "sonar"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:security-group-rule/sgr-0425b10abe6717cf9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgr-0425b10abe6717cf9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037c37a112ab38fb7",
            "security_group_rule_id": "sgr-0425b10abe6717cf9",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "sonar"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377786476154:security-group-rule/sgr-0c7c15525dc6f60e5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH",
            "from_port": 22,
            "id": "sgr-0c7c15525dc6f60e5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037c37a112ab38fb7",
            "security_group_rule_id": "sgr-0c7c15525dc6f60e5",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "sonar"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}